fixed form z-index bug in addItem, styles editOneItem, +width of buttons on adminChoose

--- a/src/components/AdminChoose/AdminChoose.scss
+++ b/src/components/AdminChoose/AdminChoose.scss
@@ -1,11 +1,7 @@
 @use '../../mixins.scss' as mixins ;
 
 #admin-choose{
-    h1{
-        text-align: center;
-        margin-bottom: 50px;
-        margin-top: 20px;
-    }
+
 
     .wrapper{
         display: flex;
@@ -13,6 +9,7 @@
         justify-content: flex-start;
         align-items: center;
         gap:20px;
+        margin-top: 50px;
     }
 
     .choose-link{
@@ -20,6 +17,8 @@
         padding:10px 20px;
         border:1px solid mixins.$primary-color;
         border-radius: 5px;
+        min-width: 250px;
+        text-align: center;
         font-weight: 700;
         color:mixins.$primary-color;
         &:hover{
