--- a/src/pages/pagesStyles/EditSingleItem.scss
+++ b/src/pages/pagesStyles/EditSingleItem.scss
@@ -8,11 +8,58 @@
     .wrapper{
         display: flex;
         justify-content: center;
+        gap:20px;
         @media(max-width:700px){
             flex-direction: column;
             align-items:center;
-            gap:20px;
+            
         }
+            .form-part{
+            background-color: white;
+            border-radius: 5px;
+            padding:10px;
+            height: fit-content;
+            display: flex;
+             flex-direction: column;
+            align-items:center;
+             gap:5px;
+             z-index: 1;
+            width:min(400px,90vw);
+
+                .form-one-input{
+                    display: flex;
+                    flex-direction: column;
+                    width:100%;
+                    max-width: 380px;
+                
+                    label{
+                        font-size: 18px;
+                        font-weight: 300;
+                        margin-bottom: 1px;
+                        &:after{
+                            content:' '
+                        }
+                    }
+                
+                    input,select{
+                        min-width:240px;
+                        
+                        width: 95%;
+                        height: 25px;
+                        margin-bottom: 5px;
+                        font-size: 18px;
+                        padding-left: 10px;
+                        opacity: 0.9;
+                        
+                    }
+                
+                
+                
+                }
+
+
+            }
+        
 
         button{
             @include mixins.base-button(mixins.$primary-color);
